--- a/KnjigaCveca/src/main/webapp/style.css
+++ b/KnjigaCveca/src/main/webapp/style.css
@@ -4,7 +4,7 @@ label {
 }
 
 input[type="text"], input[type="password"] {
-    width: 100%;
+    width: 50%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -13,7 +13,7 @@ input[type="text"], input[type="password"] {
 }
 
 button[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #0080ff;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -22,5 +22,5 @@ button[type="submit"] {
 }
 
 a {
-    color: #4CAF50;
+    color: #0080ff;
 }
